Add existing file FOR TABLE

--- a/demo/index.html
+++ b/demo/index.html
@@ -557,8 +557,8 @@
 			  
 			 	<table border="1" width="100%">
 				    <tr>
-				        <td>To : <br> <label id="textToData"></label><br><br><br><br></td>
-				        <td>Subject : <br><label id="subjectToData"></label><br><br><br></td>
+				        <td width="50%">To : <br> <label id="textToData"></label><br><br><br><br></td>
+				        <td width="50%">Subject : <br><label id="subjectToData"></label><br><br><br></td>
 				    </tr>
 				</table>
 					
