--- a/bill/index.html
+++ b/bill/index.html
@@ -558,8 +558,8 @@
 			  
 			 	<table border="1" width="100%">
 				    <tr>
-				        <td width="50px">To :   <br> <label id="textToData"></label><br><br><br><br></td>
-				        <td width="50px">Subject : <br><label id="subjectToData"></label><br><br><br></td>
+				        <td width="50%">To :   <br> <label id="textToData"></label><br><br><br><br></td>
+				        <td width="50%">Subject : <br><label id="subjectToData"></label><br><br><br></td>
 				    </tr>
 				</table>
 					
