--- a/i/index.html
+++ b/i/index.html
@@ -541,7 +541,8 @@
 			  <div style="float:left;">
 			  	<b><br> <div style="color: #F06A00;">GST No.: 24APSPP7283F1ZC</div>
 				GANESH FABRICATION</b>
-					<br>Opp: Anjali Comm. Petrol Pump, DharnidharDerasar Road,<br>
+					<br>Opp: Anjali Comm. Petrol Pump,<br>
+				         DharnidharDerasar Road,<br>
 					 Vasnna, Ahmedabad, Gujarat,380007<br>
 					<b>Phone:</b> 079-26640334, +91-98792 72373<br>
 					<b>Email:</b> Ganeshfabrication@hotmail.com<br>
