--- a/b/index.html
+++ b/b/index.html
@@ -538,8 +538,8 @@
 			<div style="clear: both">
 			  <div style="float:left;">
 			  	<b><br>GANESH FABRICATION</b>
-					<br>Opp: Anjali Comm. Petrol Pump,<br>
-					DharnidharDerasar Road, Paldi,<br>
+					<br>Opp Pratapkunj Society,<br>
+					Near vasna police station, Vasna<br>
 					Ahmedabad, Gujarat,380007<br>
 					<b>Phone:</b> 079-26640334<br>
 					<b>Mobile:</b> +91-98792 72373<br>
@@ -610,7 +610,7 @@
 				        <td><br></br>
 							<b>Bank: Bank of Baroda</b><br>
 							<b>Branch: Vasna </b><br>
-							<b>A/c No.: 18250200000332</b><br>
+							<b>A/c No.: 18250400008259</b><br>
 							<b>IFSC Code: BARB0VASNAR(Fifth Figure is Zero)</b><br>
 						</td>
 				        <td>
