--- a/q/index.html
+++ b/q/index.html
@@ -541,9 +541,9 @@
 			  <div style="float:left;">
 			  	<b><br> <div style="color: #F06A00;">GST No.: 24APSPP7283F1ZC</div>
 				GANESH FABRICATION</b>
-					<br>Opp: Anjali Comm. Petrol Pump,<br>
-				        DharnidharDerasar Road,<br>
-					 Vasnna, Ahmedabad, Gujarat,380007<br>
+					<br>Opp Pratapkunj Society,<br>
+				        Near vasna police station, Vasna<br>
+					 Ahmedabad, Gujarat,380007<br>
 					<b>Phone:</b> 079-26640334, +91-98792 72373<br>
 					<b>Email:</b> Ganeshfabrication@hotmail.com<br>
 					
@@ -764,7 +764,7 @@
 				        <td><br></br>
 							<b>Bank: Bank of Baroda</b><br>
 							<b>Branch: Vasna </b><br>
-							<b>A/c No.: 18250200000332</b><br>
+							<b>A/c No.: 18250400008259</b><br>
 							<b>IFSC Code: BARB0VASNAR(Fifth Figure is Zero)</b><br>
 						</td>
 				        <td>
